# vds-xarray

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  question.md
.github/copilot/: config.json  prompts.md
.github/copilot/instructions/: cs.instructions.md  js.instructions.md  py.instructions.md
.github/workflows/: build-and-publish-wheels.yml  build.yml  ci-cd.yml  ci.yml  dependencies.yml  manual-release.yml  release.yml
notebooks/: vds_reading.ipynb
vdsxarray/: vds.py
