[project]
name = "vdsxarray"
version = "1.0.0"
description = "An xarray backend for VDS"
readme = "README.md"
authors = [
    { name = "Guillermo Vargas", email = "gavargas22@gmail.com" }
]
requires-python = "<3.12,>=3.9"
dependencies = [
    "dask>=2024.8.0",
    "openvds>=3.4.6",
    "ovds-utils>=0.3.1",
    "xarray>=2024.7.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vdsxarray"]

[dependency-groups]
dev = [
    "matplotlib>=3.9.4",
    "scipy>=1.13.1",
]

[project.entry-points."xarray.backends"]
vds = "vdsxarray.vds:VdsEngine"
