[project]
name = "vdsxarray"
version = "1.0.0"
description = "An xarray backend for reading VDS (Volume Data Store) seismic data files"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Guillermo Vargas", email = "gavargas22@gmail.com" }
]
maintainers = [
    { name = "Guillermo Vargas", email = "gavargas22@gmail.com" }
]
keywords = ["xarray", "vds", "seismic", "geophysics", "voluum", "data", "backend"]
requires-python = ">=3.9,<3.12"
dependencies = [
    "dask>=2024.8.0",
    "openvds>=3.4.6",
    "ovds-utils>=0.3.1",
    "xarray>=2024.7.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/gavargas22/vds-xarray-backend"
"Repository" = "https://github.com/gavargas22/vds-xarray-backend"
"Documentation" = "https://github.com/gavargas22/vds-xarray-backend#readme"
"Bug Tracker" = "https://github.com/gavargas22/vds-xarray-backend/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vdsxarray"]

[dependency-groups]
dev = [
    "matplotlib>=3.9.4",
    "scipy>=1.13.1",
]
publish = [
    "build>=1.0.0",
    "twine>=5.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.entry-points."xarray.backends"]
vds = "vdsxarray.vds:VdsEngine"
